1. + Added : AddZnameActivity 2. ~ Fixed : Contacts Picker Custom Action Bar. 3. ~ Fixed : Contacts Picker Edit Text background.

--- a/res/layout/fragment_call_logs.xml
+++ b/res/layout/fragment_call_logs.xml
@@ -1,110 +1,116 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <ListView
-        android:id="@+id/call_logs_list_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="1dp"
-        android:divider="#ffca00"
-        android:dividerHeight="1dp"
-        android:drawSelectorOnTop="true"
-        android:listSelector="@drawable/zname_list_selector_holo_light" >
-    </ListView>
+    <uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout
+        android:id="@+id/call_pull_to_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <ProgressBar
-        android:id="@+id/call_logs_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="visible" />
-
-    <LinearLayout
-        android:id="@+id/call_logs_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|center_vertical"
-        android:background="@color/transparent"
-        android:orientation="vertical"
-        android:visibility="visible" >
-
-        <ImageView
-            android:id="@+id/call_logs_menu_all"
-            android:layout_width="wrap_content"
+        <ListView
+            android:id="@+id/call_logs_list_view"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/btn_ic_call_selector" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
             android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:background="@android:color/white" />
+            android:layout_marginRight="1dp"
+            android:divider="#ffca00"
+            android:dividerHeight="1dp"
+            android:drawSelectorOnTop="true"
+            android:listSelector="@drawable/zname_list_selector_holo_light" >
+        </ListView>
 
-        <ImageView
-            android:id="@+id/call_logs_menu_missed"
+        <ProgressBar
+            android:id="@+id/call_logs_progress"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/btn_ic_missed_selector" />
+            android:visibility="visible" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:background="@android:color/white" />
-
-        <ImageView
-            android:id="@+id/call_logs_menu_incoming"
+        <LinearLayout
+            android:id="@+id/call_logs_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/btn_ic_incoming_selector" />
+            android:layout_gravity="right|center_vertical"
+            android:background="@color/transparent"
+            android:orientation="vertical"
+            android:visibility="visible" >
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:background="@android:color/white" />
+            <ImageView
+                android:id="@+id/call_logs_menu_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_ic_call_selector" />
 
-        <ImageView
-            android:id="@+id/call_logs_menu_outgoing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/btn_ic_outgoing_selector" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:background="@android:color/white" />
 
-        <!-- <View -->
-        <!-- android:layout_width="match_parent" -->
-        <!-- android:layout_height="1dp" -->
-        <!-- android:layout_marginLeft="3dp" -->
-        <!-- android:layout_marginRight="3dp" -->
-        <!-- android:background="@android:color/white" /> -->
+            <ImageView
+                android:id="@+id/call_logs_menu_missed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_ic_missed_selector" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:background="@android:color/white" />
+
+            <ImageView
+                android:id="@+id/call_logs_menu_incoming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_ic_incoming_selector" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:background="@android:color/white" />
+
+            <ImageView
+                android:id="@+id/call_logs_menu_outgoing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_ic_outgoing_selector" />
+
+            <!-- <View -->
+            <!-- android:layout_width="match_parent" -->
+            <!-- android:layout_height="1dp" -->
+            <!-- android:layout_marginLeft="3dp" -->
+            <!-- android:layout_marginRight="3dp" -->
+            <!-- android:background="@android:color/white" /> -->
 
 
-        <!-- <ImageView -->
-        <!-- android:id="@+id/call_logs_menu_date" -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="wrap_content" -->
-        <!-- android:layout_gravity="center" -->
-        <!-- android:padding="5dp" -->
-        <!-- android:scaleType="fitCenter" -->
-        <!-- android:src="@drawable/ic_menu_calendar" /> -->
-    </LinearLayout>
+            <!-- <ImageView -->
+            <!-- android:id="@+id/call_logs_menu_date" -->
+            <!-- android:layout_width="wrap_content" -->
+            <!-- android:layout_height="wrap_content" -->
+            <!-- android:layout_gravity="center" -->
+            <!-- android:padding="5dp" -->
+            <!-- android:scaleType="fitCenter" -->
+            <!-- android:src="@drawable/ic_menu_calendar" /> -->
+        </LinearLayout>
+    </uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout>
 
 </FrameLayout>
