1. + Added : ReceiverIncomingCall and ReceiverOutgoingCall sends data to API on Device call state. 2. + Added : IncomingOutgoingService push data to API about device call state. 3. ~ ReDesign : ListView through application re-design alike mychat with inset.

--- a/res/layout/fragment_call_logs.xml
+++ b/res/layout/fragment_call_logs.xml
@@ -12,10 +12,9 @@
             android:id="@+id/call_logs_list_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="1dp"
-            android:divider="#ffca00"
+			android:fadingEdge="none"
             android:dividerHeight="1dp"
+            android:divider="@drawable/list_divider_inset"
             android:drawSelectorOnTop="true"
             android:listSelector="@drawable/zname_list_selector_holo_light" >
         </ListView>
