--- a/res/layout/grd_item_contact.xml
+++ b/res/layout/grd_item_contact.xml
@@ -45,7 +45,7 @@
                 android:layout_marginRight="2dp"
                 android:layout_marginTop="48dp"
                 android:layout_weight="1"
-                android:src="@drawable/zname_ic_message" />
+                android:src="@drawable/zname_ic_msg" />
         </LinearLayout>
     </FrameLayout>
 
