--- a/res/layout/grid_view_alert_dialog.xml
+++ b/res/layout/grid_view_alert_dialog.xml
@@ -12,11 +12,13 @@
         android:id="@+id/grid_alert_display_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="Vikalp Patel"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/darker_gray"
         android:textSize="20sp" />
 
     <View
@@ -41,7 +43,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:scaleType="fitCenter" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/def_contact" />
         </FrameLayout>
 
         <LinearLayout
@@ -57,11 +62,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
-                android:drawableLeft="@drawable/btn_ic_call_selected"
-                android:padding="3dp"
+                android:drawableLeft="@drawable/zname_ic_call_selected"
                 android:gravity="center"
+                android:padding="3dp"
                 android:text="Call"
-                android:textColor="#000000"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="18sp" />
 
             <View
@@ -69,18 +74,18 @@
                 android:layout_height="1dp"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
-                android:background="#000000" />
+                android:background="@color/lighter_gray" />
 
             <TextView
                 android:id="@+id/grid_alert_message"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
-                android:drawableLeft="@drawable/zname_ic_message"
+                android:drawableLeft="@drawable/zname_ic_msg"
                 android:gravity="center"
                 android:padding="3dp"
                 android:text="Message"
-                android:textColor="#000000"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
@@ -89,12 +94,12 @@
         android:id="@+id/grid_alert_cancel"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:background="@color/background_action_bar_orange"
-        android:paddingBottom="8dip"
-        android:paddingEnd="16dip"
-        android:paddingStart="16dip"
-        android:paddingTop="8dip"
+        android:padding="8dp"
         android:text="Cancel"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+         />
 
 </LinearLayout>
