--- a/res/layout/intro_view_layout.xml
+++ b/res/layout/intro_view_layout.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="top|left"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="16dp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/darker_gray"
         android:layout_marginTop="156dp"/>
 
     <TextView android:layout_height="wrap_content"
@@ -23,6 +23,6 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="200dp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/darker_gray"/>
 
 </FrameLayout>
