1 - Removed Fixed groups (Friends, Family & Work). 2 + Added Option to create Dynamic Groups.

--- a/res/values/tags.xml
+++ b/res/values/tags.xml
@@ -6,6 +6,9 @@
     <item name="TAG_CONTACT_ZNAME" type="id"/>
     <item name="TAG_CONTACT_ID" type="id"/>
     <item name="TAG_CONTACT_PHOTO_ID" type="id"/>
+    <item name="TAG_GROUP_ID" type="id"/>
+    <item name="TAG_GROUP_NAME" type="id"/>
+    <item name="TAG_GROUP_DP" type="id"/>
     <item name="TAG_PDT_ID" type="id"/>
     <item name="TAG_PDT_NAME" type="id"/>
     <item name="TAG_PDT_V_ID" type="id"/>
