--- a/res/layout/activity_mother.xml
+++ b/res/layout/activity_mother.xml
@@ -1,51 +1,77 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="fill_parent" >
 
-<!--     <android.support.v4.widget.DrawerLayout -->
-<!--         android:id="@+id/drawer_layout" -->
-<!--         android:layout_width="match_parent" -->
-<!--         android:layout_height="match_parent" > -->
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-<!--         <com.netdoers.zname.utils.PagerSlidingTabStrip -->
-<!-- 	    	android:id="@+id/pager_sliding_tab_strip" -->
-<!--     		android:layout_width="match_parent" -->
-<!--     		android:layout_height="48dip" /> -->
-        
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-        </android.support.v4.view.ViewPager>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
+            <!-- SLIDING TAB LAYOUT : DEVELOPED BY GOOGLE -->
+
+
+            <!-- <com.netdoers.zname.utils.SlidingTabLayout -->
+            <!-- android:id="@+id/sliding_tabs" -->
+            <!-- android:layout_width="fill_parent" -->
+            <!-- android:layout_height="50dp" /> -->
+            <!-- SLIDING TAB LAYOUT : DEVELOPED BY GOOGLE -->
+
+
+            <!-- PAGER SLIDING TAB STRIP -->
+
+            <com.netdoers.zname.utils.PagerSlidingTabStrip
+                android:id="@+id/pager_sliding_tab_strip"
+                android:layout_width="fill_parent"
+                android:layout_height="45dip"
+                android:background="@android:color/white"
+                app:pstsDividerColor="#FFFFA500"
+                app:pstsIndicatorColor="#FFFFA500"
+                app:pstsTabPaddingLeftRight="14dip"
+                app:pstsUnderlineColor="#FFFFA500" />
+            <!-- PAGER SLIDING TAB STRIP -->
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="45dp" >
+            </android.support.v4.view.ViewPager>
+        </RelativeLayout>
         <!--
          As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
         -->
 
-<!--         <FrameLayout -->
-<!--             android:id="@+id/content_frame" -->
-<!--             android:layout_width="match_parent" -->
-<!--             android:layout_height="match_parent" /> -->
 
-        
-<!--          android:layout_gravity="start" tells DrawerLayout to treat -->
-<!--          this as a sliding drawer on the left side for left-to-right -->
-<!--          languages and on the right side for right-to-left languages. -->
-<!--          The drawer is given a fixed width in dp and extends the full height of -->
-<!--          the container. A solid background is used for contrast -->
-<!--          with the content view. -->
-<!--         -->
-<!--         <ListView -->
-<!--             android:id="@+id/left_drawer" -->
-<!--             android:layout_width="240dp" -->
-<!--             android:layout_height="match_parent" -->
-<!--             android:layout_gravity="start" -->
-<!--             android:background="#ffa500" -->
-<!--             android:choiceMode="singleChoice" -->
-<!--             android:divider="#FFFFFF" -->
-<!--             android:dividerHeight="1dp" /> -->
-<!--     </android.support.v4.widget.DrawerLayout> -->
+        <!-- <FrameLayout -->
+        <!-- android:id="@+id/content_frame" -->
+        <!-- android:layout_width="match_parent" -->
+        <!-- android:layout_height="match_parent" /> -->
+
+
+        <!-- android:layout_gravity="start" tells DrawerLayout to treat -->
+        <!-- this as a sliding drawer on the left side for left-to-right -->
+        <!-- languages and on the right side for right-to-left languages. -->
+        <!-- The drawer is given a fixed width in dp and extends the full height of -->
+        <!-- the container. A solid background is used for contrast -->
+        <!-- with the content view. -->
+        <!--  -->
+
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="270dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/background_action_bar_orange"
+            android:choiceMode="singleChoice"
+            android:divider="#FFFFFF"
+            android:dividerHeight="1dp" />
+    </android.support.v4.widget.DrawerLayout>
 
 </RelativeLayout>
