--- a/res/layout/intro_view_layout.xml
+++ b/res/layout/intro_view_layout.xml
@@ -1,28 +1,29 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent" >
 
-    <TextView android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
+    <TextView
         android:id="@+id/intro_header_text"
-        android:textSize="26sp"
-        android:gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="top|left"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="16dp"
-        android:textColor="@android:color/darker_gray"
-        android:layout_marginTop="156dp"/>
-
-    <TextView android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:id="@+id/intro_message_text"
-        android:textSize="15sp"
+        android:layout_marginTop="156dp"
         android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/intro_message_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="top|left"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="200dp"
-        android:textColor="@android:color/darker_gray"/>
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="15sp" />
 
 </FrameLayout>
